Ran IntelliJ code cleanup + manually checking of all files.